--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
 layout: home
-title: My website
-subtitle: This is where I will tell my friends way too much about me
+title: Willkommen
+subtitle: Hier teile ich Gedanken, Erlebnisse und kleine Alltagsabenteuer. Mal oben, mal unten – weiter auf meiner persönlichen Achterbahn. Schön, dass du mitfährst! 🎢
 ---
