--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
 layout: home
 title: Willkommen
-subtitle: Hier teile ich Gedanken, Erlebnisse und kleine Alltagsabenteuer. Mal oben, mal unten – weiter auf meiner persönlichen Achterbahn. Schön, dass du mitfährst! 🎢
+subtitle: Hier teile ich Gedanken, Erlebnisse und kleine Alltagsabenteuer. Mal oben, mal unten – weiter auf meiner persönlichen Achterbahn. 🎢
 ---
